--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,19 @@ target/
 !**/src/main/**/target/
 !**/src/test/**/target/
 
+### IntelliJ IDEA ###
+.idea/modules.xml
+.idea/jarRepositories.xml
+.idea/compiler.xml
+.idea/libraries/
+*.iws
+*.iml
+*.ipr
+
+#readme file
+README.md
+
+
 ### Eclipse ###
 .apt_generated
 .classpath
