grid partially and logger modules are done

--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+/com/elearn/ta/service/
+/src/test/resources/dev.properties
+/src/test/resources/prod.properties
