--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,5 +1,5 @@
-execution_env=local
-#execution_env=remote
+#execution_env=local
+execution_env=remote
 #url=https://desk.epam.com
 url=https://spbdev.cl1-default-lb.epm-osm-anthos.eu.gcp.cloudapp.epam.com
 username=Regina_Hernandez1@epam.com
