--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,6 +1,7 @@
-#execution_env=local
-execution_env=remote
-#url=https://desk.epam.com
-url=https://spbdev.cl1-default-lb.epm-osm-anthos.eu.gcp.cloudapp.epam.com
+execution.env=local
+prod.env.url=https://desk.epam.com
+dev.env.url=https://spbdev.cl1-default-lb.epm-osm-anthos.eu.gcp.cloudapp.epam.com
+remote.driver.address=http://localhost:4444
 username=Regina_Hernandez1@epam.com
 password=111111
+locationId=4060741400367611019
