--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,9 @@
   <groupId>com.elearn.ta</groupId>
   <artifactId>desk</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
   <dependencies>
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
